# Course4

./: README.md  main.py  pyproject.toml  settings.py
src/: api_hh.py  api_vacancy_website.py  file_worker_json.py  interaction.py  parser.py  utils.py  vacancy.py
src/data/: vacancies.json
tests/: conftest.py  test_file_worker_json.py  test_parser.py  test_vacancy.py
